# StarlightAppTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  PrepareMedia.py  README.md  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh  vcpkg.json
include/: Application.hpp
media/shaders/: bump.frag  bump.vert  default.frag  default.vert  silhouetteEdge.frag  silhouetteEdge.geom  silhouetteEdge.vert  silhouetteEdgeExtrusion.frag  silhouetteEdgeExtrusion.geom  silhouetteEdgeExtrusion.vert  surfaceColor.frag  vertColor.frag  vertColor.vert
media/shaders/basicTexture/: basicTexture.frag
media/shaders/boundingBox/: bounding.frag  bounding.vert
media/shaders/extrudeNormals/: extrudeNormals.vert  extrudeNormals_triangle.geom  extrudeNormals_triangleAdj.geom
media/shaders/screenWithTexture/: screenWithTexture.frag  screenWithTexture.vert
media/shaders/volumeRenderer/: volume.comp
src/: Application.cpp  main.cpp
